@@ -1,3 +1,5 @@
+JO-2007-11-26-0: Enhancem.:  Changed project name to reflect the branch name
+
 AP-2007-11-09-0: Correction - libjuti.so -> libdrmaa.so
 
 AP-2007-11-08-0: Correction of AP-2007-10-31-0 - ARCo doesn't support tablespaces
